fix list on small devices

--- a/nutritiona-app/src/app/pages/details/list/list.component.scss
+++ b/nutritiona-app/src/app/pages/details/list/list.component.scss
@@ -1,16 +1,22 @@
 .table {
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  font-size: 1rem;
+  font-size: 0.85rem;
   border-collapse: collapse;
 
-  td,th {
-    padding: 1rem 0.5rem 0.5rem 1rem;
+  td,
+  th {
+    padding: 1rem 0 1rem 0;
     font-size: 0.9em;
   }
 }
 
 @media only screen and (min-width: 600px) {
   .table {
+    font-size: 1rem;
     min-width: 500px;
+     td,
+    th {
+      padding: 1rem 0.5rem 1rem 0.5rem;
+    }
   }
 }
